--- a/ALevoClient/LevoClient/LevoClient/zh-Hans.lproj/MainMenu.xib
+++ b/ALevoClient/LevoClient/LevoClient/zh-Hans.lproj/MainMenu.xib
@@ -409,6 +409,7 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{104, 17}, {66, 32}}</string>
 							<reference key="NSSuperview" ref="46900166"/>
+							<reference key="NSWindow"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="435874284">
@@ -432,6 +433,7 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{50, 66}, {173, 17}}</string>
 							<reference key="NSSuperview" ref="46900166"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="310467137"/>
 							<string key="NSReuseIdentifierKey">_NS:1535</string>
 							<bool key="NSEnabled">YES</bool>
@@ -450,6 +452,7 @@
 					</array>
 					<string key="NSFrameSize">{273, 115}</string>
 					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="660513586"/>
 					<string key="NSReuseIdentifierKey">_NS:20</string>
 				</object>
