--- a/ALevoClient/LevoClient/LevoClient/zh-Hans.lproj/MainMenu.xib
+++ b/ALevoClient/LevoClient/LevoClient/zh-Hans.lproj/MainMenu.xib
@@ -64,7 +64,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{197, 61}, {29, 25}}</string>
 						<reference key="NSSuperview" ref="470606977"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="65970492"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
@@ -98,7 +97,7 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{82, 7}, {66, 25}}</string>
 						<reference key="NSSuperview" ref="470606977"/>
-						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="623245319">
@@ -123,7 +122,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{197, 86}, {29, 28}}</string>
 						<reference key="NSSuperview" ref="470606977"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="692460075"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
@@ -150,7 +148,6 @@
 				</array>
 				<string key="NSFrameSize">{230, 114}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="562604839"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="NSClassName">NSView</string>
@@ -164,7 +161,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{34, 32}, {43, 17}}</string>
 						<reference key="NSSuperview" ref="878646308"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="397064774"/>
 						<string key="NSReuseIdentifierKey">_NS:1535</string>
 						<bool key="NSEnabled">YES</bool>
@@ -205,7 +201,7 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{81, 32}, {41, 17}}</string>
 						<reference key="NSSuperview" ref="878646308"/>
-						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:1535</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="428227309">
@@ -228,7 +224,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{81, 52}, {146, 17}}</string>
 						<reference key="NSSuperview" ref="878646308"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="631799424"/>
 						<string key="NSReuseIdentifierKey">_NS:1535</string>
 						<bool key="NSEnabled">YES</bool>
@@ -256,7 +251,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{37, 74}, {34, 17}}</string>
 						<reference key="NSSuperview" ref="878646308"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="301124077"/>
 						<string key="NSReuseIdentifierKey">_NS:1535</string>
 						<bool key="NSEnabled">YES</bool>
@@ -280,7 +274,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{81, 74}, {81, 17}}</string>
 						<reference key="NSSuperview" ref="878646308"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="852273949"/>
 						<string key="NSReuseIdentifierKey">_NS:1535</string>
 						<bool key="NSEnabled">YES</bool>
@@ -304,7 +297,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{31, 52}, {40, 17}}</string>
 						<reference key="NSSuperview" ref="878646308"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="344025317"/>
 						<string key="NSReuseIdentifierKey">_NS:1535</string>
 						<bool key="NSEnabled">YES</bool>
@@ -326,7 +318,6 @@
 				</array>
 				<string key="NSFrameSize">{216, 101}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="92988438"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="NSClassName">DeviceInfoView</string>
@@ -340,7 +331,7 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{102, 16}, {65, 13}}</string>
 						<reference key="NSSuperview" ref="277300830"/>
-						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:1535</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="635731868">
@@ -364,7 +355,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{9, 16}, {112, 13}}</string>
 						<reference key="NSSuperview" ref="277300830"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1070060001"/>
 						<string key="NSReuseIdentifierKey">_NS:1535</string>
 						<bool key="NSEnabled">YES</bool>
@@ -386,7 +376,6 @@
 				</array>
 				<string key="NSFrameSize">{184, 44}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="504711245"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="NSClassName">NetSpeedInfView</string>
@@ -409,7 +398,7 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{104, 17}, {66, 32}}</string>
 							<reference key="NSSuperview" ref="46900166"/>
-							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="435874284">
@@ -433,7 +422,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{50, 66}, {173, 17}}</string>
 							<reference key="NSSuperview" ref="46900166"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="310467137"/>
 							<string key="NSReuseIdentifierKey">_NS:1535</string>
 							<bool key="NSEnabled">YES</bool>
@@ -452,7 +440,6 @@
 					</array>
 					<string key="NSFrameSize">{273, 115}</string>
 					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="660513586"/>
 					<string key="NSReuseIdentifierKey">_NS:20</string>
 				</object>
@@ -469,7 +456,7 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{17, 3}, {168, 80}}</string>
 						<reference key="NSSuperview" ref="839230088"/>
-						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:1535</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="900356976">
@@ -488,7 +475,6 @@
 				</array>
 				<string key="NSFrameSize">{202, 87}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="936293047"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="NSClassName">LogView</string>
@@ -2122,182 +2108,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">2530</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">AppDelegate</string>
-					<string key="superclassName">NSObject</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="onExit:">id</string>
-						<string key="onLogin:">id</string>
-						<string key="onPreferences:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="onExit:">
-							<string key="name">onExit:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="onLogin:">
-							<string key="name">onLogin:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="onPreferences:">
-							<string key="name">onPreferences:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="alerContextLb">NSTextField</string>
-						<string key="alert">NSWindow</string>
-						<string key="alertBnOk">NSButton</string>
-						<string key="bnExit">NSButton</string>
-						<string key="bnLogin">NSButton</string>
-						<string key="bnPreferences">NSButton</string>
-						<string key="deviceInfo">DeviceInfoView</string>
-						<string key="logView">LogView</string>
-						<string key="netSpeed">NetSpeedInfView</string>
-						<string key="popView">NSView</string>
-						<string key="popover">NSPopover</string>
-						<string key="window">NSWindow</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="alerContextLb">
-							<string key="name">alerContextLb</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="alert">
-							<string key="name">alert</string>
-							<string key="candidateClassName">NSWindow</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="alertBnOk">
-							<string key="name">alertBnOk</string>
-							<string key="candidateClassName">NSButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bnExit">
-							<string key="name">bnExit</string>
-							<string key="candidateClassName">NSButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bnLogin">
-							<string key="name">bnLogin</string>
-							<string key="candidateClassName">NSButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bnPreferences">
-							<string key="name">bnPreferences</string>
-							<string key="candidateClassName">NSButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="deviceInfo">
-							<string key="name">deviceInfo</string>
-							<string key="candidateClassName">DeviceInfoView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="logView">
-							<string key="name">logView</string>
-							<string key="candidateClassName">LogView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="netSpeed">
-							<string key="name">netSpeed</string>
-							<string key="candidateClassName">NetSpeedInfView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="popView">
-							<string key="name">popView</string>
-							<string key="candidateClassName">NSView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="popover">
-							<string key="name">popover</string>
-							<string key="candidateClassName">NSPopover</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="window">
-							<string key="name">window</string>
-							<string key="candidateClassName">NSWindow</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/AppDelegate.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">DeviceInfoView</string>
-					<string key="superclassName">NSView</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="lbDev">NSTextField</string>
-						<string key="lbMac">NSTextField</string>
-						<string key="lbStateContext">NSTextField</string>
-						<string key="lbStateTitle">NSTextField</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="lbDev">
-							<string key="name">lbDev</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lbMac">
-							<string key="name">lbMac</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lbStateContext">
-							<string key="name">lbStateContext</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lbStateTitle">
-							<string key="name">lbStateTitle</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/DeviceInfoView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">LogView</string>
-					<string key="superclassName">NSView</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">lb1</string>
-						<string key="NS.object.0">NSTextField</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">lb1</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">lb1</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/LogView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">NSLayoutConstraint</string>
-					<string key="superclassName">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">NetSpeedInfView</string>
-					<string key="superclassName">NSView</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="lbDown">NSTextField</string>
-						<string key="lbUp">NSTextField</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="lbDown">
-							<string key="name">lbDown</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lbUp">
-							<string key="name">lbUp</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NetSpeedInfView.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
